gccida/c3/gen_split_1236
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_split_1236/src/insn-emit.c:17442:3: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
( rtx_code)( unsigned __int16)*( _DWORD *)operands[3], 
  ^~~~~~~~
  rtx_cost
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_split_1236/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_split_1236/src/insn-emit.c:17442:14: error: expected expression
( rtx_code)( unsigned __int16)*( _DWORD *)operands[3], 
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_split_1236/src/insn-emit.c:17443:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)operands[3]), 
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_split_1236/src/insn-emit.c:17443:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)operands[3]), 
                 ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_split_1236/src/obj/insn-emit.o] Error 1
